Add raises-exception cell tags

--- a/notebooks/2-basic-usage.ipynb
+++ b/notebooks/2-basic-usage.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "177a1666",
    "metadata": {},
@@ -45,6 +46,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e9818a85",
    "metadata": {},
@@ -67,6 +69,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "520079a2",
    "metadata": {},
@@ -78,7 +81,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "31c6440f",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "p2 = PointV1(x=-1, y=4)\n",
@@ -87,6 +94,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8ad8bcef",
    "metadata": {},
@@ -171,6 +179,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f083a9d3",
    "metadata": {},
@@ -195,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "581cb794",
    "metadata": {},
@@ -226,6 +236,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b2beef62",
    "metadata": {},
@@ -241,13 +252,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "f061ab68",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "p1_v1.distance_to(p2_v1)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ea1376b5",
    "metadata": {},
@@ -266,6 +282,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "808fcd59",
    "metadata": {},
@@ -332,6 +349,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b8cb5b06",
    "metadata": {},
@@ -356,7 +374,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b9d4c099",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "class PointV3(BaseModel):\n",
@@ -379,6 +401,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6f5f11dd",
    "metadata": {},
@@ -411,6 +434,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e94bcc1e",
    "metadata": {},
@@ -431,6 +455,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "37d80ba4",
    "metadata": {},
@@ -446,13 +471,18 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "7a0ff423",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "display(LineSegment(x2=1, y2=9, hello=\"world\"))"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "436944cb",
    "metadata": {},
@@ -464,7 +494,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "da0fe9e0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pydantic import Extra\n",
@@ -488,7 +520,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "b6cc7c85",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "class LineSegment(BaseModel):\n",
@@ -506,6 +542,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "202e8503",
    "metadata": {},
@@ -541,6 +578,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eaa8081a",
    "metadata": {},
