--- a/notebooks/4-serialisation-and-deserialisation.ipynb
+++ b/notebooks/4-serialisation-and-deserialisation.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5326c889",
    "metadata": {},
@@ -65,6 +66,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8da1f3e",
    "metadata": {},
@@ -91,6 +93,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "940da5f5",
    "metadata": {},
@@ -117,6 +120,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d734767c",
    "metadata": {},
@@ -142,6 +146,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b9ca4a02",
    "metadata": {},
@@ -174,6 +179,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "961313e9",
    "metadata": {},
@@ -202,6 +208,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4afbfd97",
    "metadata": {},
@@ -226,6 +233,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8f9477a0",
    "metadata": {},
@@ -246,6 +254,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "05c3ee9c",
    "metadata": {},
@@ -275,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3cbc4120",
    "metadata": {},
@@ -293,6 +303,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "983661e8",
    "metadata": {},
@@ -311,6 +322,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b1dbf12",
    "metadata": {},
@@ -329,6 +341,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "41d9a072",
    "metadata": {},
@@ -337,6 +350,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3f5cd82e",
    "metadata": {},
@@ -371,6 +385,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4e87663a",
    "metadata": {},
@@ -382,7 +397,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "34384186",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "class LineSegment(BaseModel):\n",
@@ -402,6 +421,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e7ce9e2c",
    "metadata": {},
@@ -422,6 +442,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "68f8d1b6",
    "metadata": {},
@@ -448,6 +469,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eace403c",
    "metadata": {},
@@ -471,6 +493,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b1b08756",
    "metadata": {},
@@ -484,7 +507,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "51131695",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "line_segment_data = {\"p1\": {\"x\": 1, \"y\": 3}, \"p2\": {\"x\": 8, \"y\": 2}}\n",
@@ -493,6 +520,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bde5cf31",
    "metadata": {},
@@ -527,6 +555,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "942db39a",
    "metadata": {},
@@ -560,6 +589,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "bcf28727",
    "metadata": {},
@@ -568,6 +598,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "87732d36",
    "metadata": {},
@@ -588,6 +619,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d64fc6af",
    "metadata": {},
@@ -598,6 +630,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23e3cc9b",
    "metadata": {},
@@ -613,6 +646,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "888575b5",
    "metadata": {},
