--- a/notebooks/1-introduction-and-installation.ipynb
+++ b/notebooks/1-introduction-and-installation.ipynb
@@ -153,7 +153,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
    "outputs": [],
    "source": [
     "plt.xlim(0, 6)  # Now trying to correct in the notebook...ops even more confusing..."
