Update summary notebook

--- a/notebooks/5-summary-and-conclusion.ipynb
+++ b/notebooks/5-summary-and-conclusion.ipynb
@@ -5,7 +5,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Summary and Conclusion"
+    "# Summary and Conclusion\n",
+    "\n",
+    "Pydantic is not meant to introduce static typing to Python \"trough the backdoor\". However it provides type conversion and validation where it brings the most value. Such it is a great tool to improve the user experience of scientific software and to make it more robust and easier to maintain.\n"
    ]
   }
  ],
