Fix notebook links from index

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -5,17 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SciPy 2023 Pydantic Tutorial Page\n",
-    "\n",
     "This is the page with the rendered tutorials.\n",
     "\n",
     "## Content Overview\n",
     "\n",
-    "  1. [Introduction and Installation](notebooks/1-introduction-and-installation)\n",
-    "  2. [Basic Usage](notebooks/2-basic-usage)\n",
-    "  3. [Advanced Usage](notebooks/3-advanced-usage)\n",
-    "  4. [Serialisation and Deserialisation](notebooks/4-serialisation-and-deserialisation)\n",
-    "  5. [Summary and Conclusion](notebooks/5-summary-and-conclusion)"
+    "  1. [Introduction and Installation](1-introduction-and-installation)\n",
+    "  2. [Basic Usage](2-basic-usage)\n",
+    "  3. [Advanced Usage](3-advanced-usage)\n",
+    "  4. [Serialisation and Deserialisation](4-serialisation-and-deserialisation)\n",
+    "  5. [Summary and Conclusion](5-summary-and-conclusion)"
    ]
   }
  ],
