Further updates to the advanced usage

--- a/notebooks/3-advanced-usage.ipynb
+++ b/notebooks/3-advanced-usage.ipynb
@@ -40,13 +40,13 @@
     "\n",
     "\n",
     "class LineV1(BaseModel):\n",
-    "    \"\"\"A Line object that can be used to represent a line.\"\"\"\n",
+    "    \"\"\"A Line object represented by two lists of coordinates\"\"\"\n",
     "\n",
     "    x: list[float]\n",
     "    y: list[float]\n",
     "\n",
     "    def length(self):\n",
-    "        \"\"\"Length of the line\"\"\"\n",
+    "        \"\"\"Line length computed by summing over the distance between points\"\"\"\n",
     "        length = 0\n",
     "\n",
     "        for idx in range(len(self.x) - 1):\n",
@@ -56,6 +56,14 @@
     "            ) ** 0.5\n",
     "\n",
     "        return length"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instanciation of the model works as expected:"
    ]
   },
   {
@@ -82,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the behavior is exactly the same as for simple types. So values are converted to the specified type if possible, and otherwise a `ValidationError` is raised."
+    "The behavior is exactly the same as for simple types. So values are converted to the specified type if possible:"
    ]
   },
   {
@@ -100,9 +108,85 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If the type cannot be converted a `ValidationError` is raised:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "line_v1 = LineV1(x=[0, 1, \"10^-2\"], y=[0, 1, 2])\n",
+    "display(line_v1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that pydantic indicates the index of the invalid value in the error message using `x -> 2`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Typed dictionaries are defined in a similar way using the `dict` generic type:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic import BaseModel\n",
+    "\n",
+    "\n",
+    "class LineV2(BaseModel):\n",
+    "    \"\"\"A Line object represented by two lists of coordinates\"\"\"\n",
+    "\n",
+    "    coordinates: dict[str, list[float]]\n",
+    "\n",
+    "    def length(self):\n",
+    "        \"\"\"Line length computed by summing over the distance between points\"\"\"\n",
+    "        length = 0\n",
+    "        x = self.coordinates[\"x\"]\n",
+    "        y = self.coordinates[\"y\"]\n",
+    "\n",
+    "        for idx in range(len(x) - 1):\n",
+    "            length += ((x[idx] - x[idx + 1]) ** 2 + (y[idx] - y[idx + 1]) ** 2) ** 0.5\n",
+    "\n",
+    "        return length"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = {\n",
+    "    \"x\": [0, 1, 3],\n",
+    "    \"y\": [0, 1, 2],\n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Enums and Union Types\n",
     "\n",
-    "In manny cases it is useful to provide users with a selection of valid values, such as strings. The data structure to handle this is called `Enum`. Enums are defined using the `Enum` generic type in Python. For example, we can define a selection for the line color:\n"
+    "In many cases it is useful to provide users with a selection of valid values, such as a choice of strings. The data structure to handle this is called `Enum`. Enums are defined using the `Enum` generic type in Python. For example, we can define a selection for the line color:\n"
    ]
   },
   {
@@ -120,9 +204,23 @@
     "\n",
     "    red = \"red\"\n",
     "    green = \"green\"\n",
-    "    blue = \"blue\"\n",
-    "\n",
-    "\n",
+    "    blue = \"blue\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And add this to the definiton of the line class:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class LineV2(BaseModel):\n",
     "    \"\"\"A Line object that can be used to represent a line.\"\"\"\n",
     "\n",
@@ -141,6 +239,14 @@
     "            ) ** 0.5\n",
     "\n",
     "        return length"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On initialisation we can now pass a color:"
    ]
   },
   {
@@ -179,7 +285,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that there is https://github.com/pydantic/pydantic-extra-types, which provides support for validation of CSS colors. `from pydantic.color import Color`"
+    "Pydantic now gives a useful error message, saying that the value is not a valid enumeration member; and it also lists the valid choices.\n",
+    "\n",
+    "**Note:** that there is https://github.com/pydantic/pydantic-extra-types, which provides support for validation of CSS colors. `from pydantic.color import Color`, so there is actually no reason to implement this ourselves."
    ]
   },
   {
@@ -188,7 +296,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Optional, Union\n",
+    "from typing import Union\n",
     "\n",
     "from pydantic import BaseModel\n",
     "from enum import Enum\n",
@@ -214,23 +322,11 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "\n",
     "### Datetime Types\n",
     "\n",
-    "Pydantic supports parsing and validation of datetime types.\n",
+    "Another very useful advanced type is the `datetime`, which lets users handle dates and times. Pydantic natively supports parsing and validation of datetime types.\n",
     "\n"
    ]
   },
@@ -244,7 +340,7 @@
     "\n",
     "\n",
     "class LonLatTimeVector(BaseModel):\n",
-    "    \"\"\"Represent a position on earth with time.\"\"\"\n",
+    "    \"\"\"Represents a position on earth with time.\"\"\"\n",
     "\n",
     "    lon: float\n",
     "    lat: float\n",
@@ -256,24 +352,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Custom Data Types"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Hierarchical Structures\n",
+    "### Custom Data Types / Hierarchical Structures\n",
     "\n",
-    "One of the most powerful features of Pydantic is the ability to combine models to create hierarchical structures. This is done by defining a model attribute as another model.\n"
+    "One of the most powerful features of Pydantic is the ability to combine models to create hierarchical structures. This is done by defining a class attribute as another model. For example we define a triangle using three points:\n"
    ]
   },
   {
@@ -333,18 +414,42 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of course this also works for list of `Point` objects. For example we can rewrite the definition of the `Line` class we introduced above as follows:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LineV3(BaseModel):\n",
-    "    \"\"\"Line object\"\"\"\n",
+    "from pydantic import BaseModel\n",
     "\n",
-    "    points = list[Point]\n",
+    "\n",
+    "class Point(BaseModel):\n",
+    "    \"\"\"Representation of a two-dimensional point coordinate.\"\"\"\n",
+    "\n",
+    "    x: float\n",
+    "    y: float\n",
+    "\n",
+    "    def distance_to(self, other: \"Point\") -> float:\n",
+    "        \"\"\"Computes the distance to another `PointV3`.\"\"\"\n",
+    "        dx = self.x - other.x\n",
+    "        dy = self.y - other.y\n",
+    "        return (dx**2 + dy**2) ** 0.5\n",
+    "\n",
+    "\n",
+    "class LineV3(BaseModel):\n",
+    "    \"\"\"Line object represented by a list of points\"\"\"\n",
+    "\n",
+    "    points: list[Point]\n",
     "\n",
     "    def length(self):\n",
-    "        \"\"\"Line length\"\"\"\n",
+    "        \"\"\"Line length computed by summing over the distance between points\"\"\"\n",
     "        length = 0\n",
     "\n",
     "        for point, next_point in zip(self.points[:-1], self.points[1:]):\n",
@@ -358,7 +463,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you compare to our first implemmentation at the beginning the `LineV3` is more compact, better readable and more elegant. "
+    "Which can now be used as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "line_v3 = LineV3(points=[Point(x=0, y=0), Point(x=1, y=1)])\n",
+    "display(line_v3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(line_v3.length())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you compare to our first implementation at the beginning the `LineV3` is more compact, better readable and more elegant. "
    ]
   },
   {
@@ -368,7 +500,7 @@
    "source": [
     "### Private Attributes\n",
     "\n",
-    "By default all attributes of a Pydantic model are public. However, sometimes we want to define private attributes, which are not accessible from outside the model. This can be done using the `ClassVar` and `PrivateAttr` types. The `ClassVar` type is used to define class variables, which are shared by all instances of the class. The `PrivateAttr` type is used to define private attributes, which are not accessible from outside the model. The following example shows how to use these types:"
+    "By default all attributes of a Pydantic model are public. However, sometimes we want to define private attributes, which are not accessible from outside the model. This can be done using the `ClassVar` and `PrivateAttr` types. The `ClassVar` type is used to define class variables, which are shared by all instances of the class. The `PrivateAttr` type is used to define private attributes, which are not accessible from outside the model. The following example shows how to use these types in more detail:"
    ]
   },
   {
@@ -377,8 +509,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyClass:\n",
-    "    pass"
+    "class LineV4(BaseModel):\n",
+    "    \"\"\"Line object represented by a list of points\"\"\"\n",
+    "\n",
+    "    points = list[Point]\n",
+    "\n",
+    "    def length(self):\n",
+    "        \"\"\"Line length computed by summing over the distance between points\"\"\"\n",
+    "        length = 0\n",
+    "\n",
+    "        for point, next_point in zip(self.points[:-1], self.points[1:]):\n",
+    "            length += point.distance_to(next_point)\n",
+    "\n",
+    "        return length"
    ]
   },
   {
