Add content to datetime section

--- a/notebooks/3-advanced-usage.ipynb
+++ b/notebooks/3-advanced-usage.ipynb
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class LineV2(BaseModel):\n",
+    "class ColoredLine(BaseModel):\n",
     "    \"\"\"A Line object that can be used to represent a line.\"\"\"\n",
     "\n",
     "    x: list[float]\n",
@@ -255,8 +255,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "line_v2 = LineV2(x=[0, 1, 2], y=[0, 1, 2], color=\"red\")\n",
-    "display(line_v2)"
+    "colored_line = ColoredLine(x=[0, 1, 2], y=[0, 1, 2], color=\"red\")\n",
+    "display(colored_line)"
    ]
   },
   {
@@ -277,7 +277,7 @@
    },
    "outputs": [],
    "source": [
-    "line_v2 = LineV2(x=[0, 1, 2], y=[0, 1, 2], color=\"purple\")"
+    "colored_line = ColoredLine(x=[0, 1, 2], y=[0, 1, 2], color=\"purple\")"
    ]
   },
   {
@@ -326,7 +326,7 @@
     "\n",
     "### Datetime Types\n",
     "\n",
-    "Another very useful advanced type is the `datetime`, which lets users handle dates and times. Pydantic natively supports parsing and validation of datetime types.\n",
+    "Another very useful advanced type is the `datetime`, which lets users handle dates and times. Pydantic natively supports parsing and validation of datetime types. This relies on the Python standard library (see https://docs.python.org/3/library/datetime.html). Let's take a look at an example:\n",
     "\n"
    ]
   },
@@ -342,9 +342,92 @@
     "class LonLatTimeVector(BaseModel):\n",
     "    \"\"\"Represents a position on earth with time.\"\"\"\n",
     "\n",
-    "    lon: float\n",
-    "    lat: float\n",
-    "    time: datetime = None"
+    "    lon: float = 0.0\n",
+    "    lat: float = 0.0\n",
+    "    time: datetime = None\n",
+    "\n",
+    "\n",
+    "position = LonLatTimeVector(lon=1.0, lat=2.0, time=datetime.now())\n",
+    "display(position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(position.time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "position.time.isoformat()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`datetime.now()` already creates a `datetime` object, but pydantic also supports other valid formats, such as:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Time in ISO format\n",
+    "position = LonLatTimeVector(time=\"2021-01-01T00:00:00\")\n",
+    "display(position)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ints or floats interpred as unix time, i.e. seconds since 1970-01-01T00:00:00\n",
+    "position = LonLatTimeVector(time=1609459200)\n",
+    "display(position)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try to pass an invalid datetime:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "position = LonLatTimeVector(time=\"2021-01-01\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other Types\n",
+    "\n",
+    "There is a variety of other useful types built into pydantic. We have e.g. already mentioned the `Color` type above. Most of these types are mostly relevant for web development but, non-the-less, it is good to know that they exist. For an overview of those types see https://docs.pydantic.dev/latest/usage/types/#pydantic-types and also https://github.com/pydantic/pydantic-extra-types (unreleased)."
    ]
   },
   {
@@ -354,7 +437,7 @@
    "source": [
     "### Custom Data Types / Hierarchical Structures\n",
     "\n",
-    "One of the most powerful features of Pydantic is the ability to combine models to create hierarchical structures. This is done by defining a class attribute as another model. For example we define a triangle using three points:\n"
+    "One of the most powerful features of Pydantic is the ability to combine models to create hierarchical structures. This is done simply by using an existing pydantix model as type. For example we easily define a triangle using three points:\n"
    ]
   },
   {
@@ -382,9 +465,9 @@
     "class Triangle(BaseModel):\n",
     "    \"\"\"Representation of a triangle\"\"\"\n",
     "\n",
-    "    point_a: Point\n",
-    "    point_b: Point\n",
-    "    point_c: Point\n",
+    "    point_a: Point = Point(x=0, y=0)\n",
+    "    point_b: Point = Point(x=1, y=0)\n",
+    "    point_c: Point = Point(x=0, y=1)\n",
     "\n",
     "    def circumference(self):\n",
     "        \"\"\"Circumference of the triangle\"\"\"\n",
@@ -397,8 +480,8 @@
     "\n",
     "triangle = Triangle(\n",
     "    point_a=Point(x=0, y=0),\n",
-    "    point_b=Point(x=1, y=0),\n",
-    "    point_c=Point(x=0, y=1),\n",
+    "    point_b=Point(x=0.5, y=0),\n",
+    "    point_c=Point(x=0, y=0.5),\n",
     ")\n",
     "\n",
     "display(triangle)"
@@ -411,6 +494,46 @@
    "outputs": [],
    "source": [
     "print(triangle.circumference())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alternatively in this case we can also pass a dictionary to the model without creating the `Point` instances first:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "triangle = Triangle(\n",
+    "    point_a={\"x\": 0, \"y\": 0.5},\n",
+    "    point_b={\"x\": 0.5, \"y\": 0},\n",
+    "    point_c={\"x\": 0, \"y\": 0},\n",
+    ")\n",
+    "\n",
+    "print(triangle.circumference())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pydantic will automatically convert the dictionaries to `Point` instances by passing the arguments to `Point(**kwargs)`. This is already a preview of the serialization and deserialization of models into dictionaries and hierarchical languages such as JSON, YAML and TOML. Let's quickly verify the type of the point:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(triangle.point_a)"
    ]
   },
   {
