--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -11,10 +11,17 @@
     "\n",
     "  1. [Introduction and Installation](1-introduction-and-installation)\n",
     "  2. [Basic Usage](2-basic-usage)\n",
-    "  3. [Advanced Usage](3-advanced-usage)\n",
+    "  3. [Advanced Usage I](3-advanced-usage-part-I)\n",
+    "  3. [Advanced Usage II](3-advanced-usage-part-II)\n",
     "  4. [Serialisation and Deserialisation](4-serialisation-and-deserialisation)\n",
     "  5. [Summary and Conclusion](5-summary-and-conclusion)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
