Small improvements to introduction

--- a/notebooks/1-introduction-and-installation.ipynb
+++ b/notebooks/1-introduction-and-installation.ipynb
@@ -38,22 +38,11 @@
     "    return 2 * x\n",
     "\n",
     "\n",
-    "def my_other_function(x):\n",
-    "    return 2.0 * x\n",
-    "\n",
-    "\n",
     "# Expected behaviour\n",
     "print(my_function(3))\n",
     "\n",
     "# Half-Expected behaviour\n",
-    "print(my_function(3.14))\n",
-    "\n",
-    "# Possibly unexpected behaviour\n",
-    "print(my_function(\"hello\"))\n",
-    "print(my_function(x=True))\n",
-    "\n",
-    "# Now try this\n",
-    "# print(my_other_function('hello'))"
+    "print(my_function(3.14))"
    ]
   },
   {
@@ -61,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python will \"happily\" execute the calls to `my_function`, but the result is possibly un-expected. In contrast the call to `my_other_function` fails. The reason is that the `*` operator is overloaded for strings / bools and integers, but not for strings and floats."
+    "Now we call the same method with a different type of argument:"
    ]
   },
   {
@@ -70,7 +59,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(type(my_function(\"hello\")))"
+    "# Possibly unexpected behaviour\n",
+    "print(my_function(\"hello\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Maybe even mor unexpected behaviour\n",
+    "print(my_function(x=True))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now let's define a different fucntion, which naively does the same as before:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "raises-exception"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def my_other_function(x):\n",
+    "    return 2.0 * x\n",
+    "\n",
+    "\n",
+    "# Now try this\n",
+    "print(my_other_function(\"hello\"))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python will \"happily\" execute the calls to `my_function`, but the result is possibly un-expected. In contrast the call to `my_other_function` fails. The reason is that the `*` operator is overloaded for strings / bools and integers, but not for strings and floats. This behaviou is built into the Python language and can not be changed. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = \"hello\"\n",
+    "type(value)"
    ]
   },
   {
@@ -96,7 +140,8 @@
     "import yaml\n",
     "\n",
     "\n",
-    "def process_data(data):\n",
+    "def parse_data_into_lists(data):\n",
+    "    \"\"\"Parse data into lists of values\"\"\"\n",
     "    temperature = [_[\"temperature\"] for _ in data]\n",
     "    time = [_[\"time\"] for _ in data]\n",
     "    return {\n",
@@ -108,8 +153,7 @@
     "with open(\"my-data.yaml\", \"r\") as fh:\n",
     "    data = yaml.safe_load(fh)\n",
     "\n",
-    "\n",
-    "processed = process_data(data=data)\n",
+    "processed = parse_data_into_lists(data=data)\n",
     "\n",
     "# Compute mean\n",
     "mean = sum(processed[\"temperature\"]) / len(processed[\"temperature\"])"
