Rename introduction to include refreshers

--- a/notebooks/index.ipynb
+++ b/notebooks/index.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "## Content Overview\n",
     "\n",
-    "  1. [Introduction and Installation](1-introduction-and-installation)\n",
-    "  2. [Basic Usage](2-basic-usage)\n",
-    "  3. [Advanced Usage I](3-advanced-usage-part-I)\n",
-    "  3. [Advanced Usage II](3-advanced-usage-part-II)\n",
-    "  4. [Serialisation and Deserialisation](4-serialisation-and-deserialisation)\n",
-    "  5. [Summary and Conclusion](5-summary-and-conclusion)"
+    "  1. [Introduction and Refreshers](1-introduction-and-refreshers)\n",
+    "  1. [Basic Usage](2-basic-usage)\n",
+    "  1. [Advanced Usage I](3-advanced-usage-part-I)\n",
+    "  1. [Advanced Usage II](3-advanced-usage-part-II)\n",
+    "  1. [Serialisation and Deserialisation](4-serialisation-and-deserialisation)\n",
+    "  1. [Summary and Conclusion](5-summary-and-conclusion)"
    ]
   },
   {
